--- a/projects/carey-auth/src/lib/components/mat-short-vertical-login/mat-short-vertical-login.component.html
+++ b/projects/carey-auth/src/lib/components/mat-short-vertical-login/mat-short-vertical-login.component.html
@@ -2,7 +2,7 @@
   <div fxLayout="column" fxLayoutAlign="center">
     <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
       <div style="margin-bottom:15px; height:75px">
-        <!--<alert></alert>-->
+        <alert></alert>
       </div>
       <div fxLayoutAlign="center">
         <mat-form-field style="width:50%" appearance="fill">
